# pandel_bender

./: .gitignore  BUILD.md  BUILD_TEST_REPORT.md  CMakeLists.txt  CMakePresets.json  CONFIGURE_GUIDE.md  CORE_IMPLEMENTATION_SUMMARY.md  INSTALLATION_PROGRESS.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_NEXT_STEPS.md  PROJECT_STATUS.md  Promt1.md  README.md  ROADMAP_OVERVIEW.md  build.bat  install_dependencies.bat  vcpkg.json
docs/: ConstraintSolver_Usage.md  GeometricPrecedenceAnalyzer_Usage.md  MASTER_CONTEXT.md  PHASE2_PROGRESS.md  Phase2_API_Reference.md  Phase2_Architecture.md  Phase3_Architecture.md  Phase4_Architecture.md  Phase5_Architecture.md  ROADMAP.md
docs/architecture/: system-overview.md
docs/data-structures/: cross-phase-types.md  phase1-types.md
docs/phases/: phase1-checklist.md  phase1-design.md  phase2-design.md
docs/plans/: 2026-02-05-phase2-constraint-solver.md  2026-02-06-phase2-tasks-31-40.md  2026-02-07-phase3-sequencer.md  2026-02-07-phase4-physics-validator.md  2026-02-08-phase5-post-processor.md
docs/tasks/: task27-notes.md  task28-notes.md  task29-notes.md  task30-notes.md
include/openpanelcam/core/: constants.h  error.h  geometry_utils.h  logger.h  types.h
include/openpanelcam/phase1/: base_face_identifier.h  bend_classifier.h  fag.h  fag_builder.h  geometry_healer.h  phase1.h  step_reader.h  surface_analyzer.h
include/openpanelcam/phase2/: aba_constraint_analyzer.h  constraint_solver.h  geometric_precedence_analyzer.h  grasp_constraint_generator.h  phase1_adapter.h  phase1_mock.h  precedence_dag.h  types.h
include/openpanelcam/phase3/: astar_search.h  cost_function.h  heuristic.h  sequencer.h  successor_generator.h  types.h  zobrist_table.h
include/openpanelcam/phase4/: aabb_tree.h  bent_state.h  collision_detector.h  extraction_checker.h  grasp_physics.h  negative_sequence.h  sequence_validator.h  swept_volume.h  types.h
include/openpanelcam/phase5/: animation_builder.h  instruction_builder.h  json_generator.h  output_validator.h  post_processor.h  types.h  xml_generator.h
include/openpanelcam/unfold/: bend_allowance.h  k_factor_table.h  types.h  unfold_tree.h  unfolder.h
samples/: CMakeLists.txt  README.md  demo_phase1_modules.cpp  generate_test_steps.cpp  parse_step.cpp  test_core.cpp  visualize_fag.cpp
samples/step_files/: flat_plate.step  l_bracket.step  u_channel.step
src/core/: CMakeLists.txt  error.cpp  geometry_utils.cpp  logger.cpp
src/phase1/: CMakeLists.txt  angle_calculator.cpp  base_face_identifier.cpp  bend_classifier.cpp  edge_analyzer.cpp  fag.cpp  fag_builder.cpp  geometry_healer.cpp  phase1.cpp  step_reader.cpp  surface_analyzer.cpp
src/phase2/: CMakeLists.txt  aba_constraint_analyzer.cpp  constraint_solver.cpp  geometric_precedence_analyzer.cpp  grasp_constraint_generator.cpp  precedence_dag.cpp
src/phase3/: CMakeLists.txt  astar_search.cpp  cost_function.cpp  heuristic.cpp  sequencer.cpp  successor_generator.cpp  zobrist_table.cpp
src/phase4/: CMakeLists.txt  aabb_tree.cpp  bent_state.cpp  collision_detector.cpp  collision_primitives.cpp  extraction_checker.cpp  grasp_physics.cpp  negative_sequence.cpp  sequence_validator.cpp  swept_volume.cpp
src/phase5/: CMakeLists.txt  animation_builder.cpp  instruction_builder.cpp  json_generator.cpp  output_validator.cpp  post_processor.cpp  xml_generator.cpp
src/ui/: CMakeLists.txt  main.cpp
src/ui/app/: AppController.cpp  AppController.h  MainWindow.cpp  MainWindow.h
src/ui/panels/: DiagnosticsPanel.cpp  DiagnosticsPanel.h  PartTreePanel.cpp  PartTreePanel.h  PropertiesPanel.cpp  PropertiesPanel.h
src/ui/simulation/: SimulationControls.cpp  SimulationControls.h
src/ui/timeline/: SequenceTimeline.cpp  SequenceTimeline.h
src/ui/viewport/: OcctViewport.cpp  OcctViewport.h  ViewportToolbar.cpp  ViewportToolbar.h
src/unfold/: CMakeLists.txt  bend_allowance.cpp  k_factor_table.cpp  unfold_tree.cpp  unfolder.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/phase2/: CMakeLists.txt  test_aba_constraint_analyzer.cpp  test_constraint_solver.cpp  test_constraint_solver_cycles.cpp  test_constraint_solver_e2e.cpp  test_constraint_solver_states.cpp  test_constraint_solver_validation.cpp  test_cycle_resolution.cpp  test_edge_cases.cpp  test_geometric_integration.cpp  test_geometric_precedence_analyzer.cpp  test_grasp_constraint_generator.cpp  test_mir_algorithm.cpp  test_performance_benchmark.cpp  test_phase1_integration.cpp  test_precedence_dag.cpp  test_sample_parts.cpp  test_state_optimization.cpp  test_subset_sum.cpp  test_types.cpp
tests/phase2/fixtures/: sample_parts.h
tests/phase3/: CMakeLists.txt  test_astar.cpp  test_cost_function.cpp  test_edge_cases.cpp  test_heuristic.cpp  test_performance.cpp  test_repo.cpp  test_sequencer.cpp  test_successor.cpp  test_types.cpp  test_zobrist.cpp
tests/phase4/: CMakeLists.txt  test_aabb_tree.cpp  test_angular_intervals.cpp  test_collision.cpp  test_extraction.cpp  test_grasp_physics.cpp  test_integration.cpp  test_negative_sequence.cpp  test_phase4_edge_cases.cpp  test_phase4_performance.cpp  test_sequence_validator.cpp  test_types.cpp
tests/phase5/: CMakeLists.txt  test_animation_builder.cpp  test_instruction_builder.cpp  test_integration.cpp  test_json_generator.cpp  test_output_validator.cpp  test_phase5_edge_cases.cpp  test_phase5_performance.cpp  test_post_processor.cpp  test_types.cpp  test_xml_generator.cpp
tests/unfold/: CMakeLists.txt  test_bend_allowance.cpp  test_k_factor_table.cpp  test_unfold_tree.cpp  test_unfolder.cpp
tests/unit/: CMakeLists.txt
