#==============================================================================
# OpenPanelCAM Test Suite
#==============================================================================

# Include Catch2
include(Catch)

#==============================================================================
# Unit Tests
#==============================================================================

add_subdirectory(unit)

#==============================================================================
# Phase 2 Tests
#==============================================================================

add_subdirectory(phase2)

#==============================================================================
# Phase 3 Tests
#==============================================================================

add_subdirectory(phase3)

#==============================================================================
# Phase 4 Tests
#==============================================================================

add_subdirectory(phase4)

#==============================================================================
# Phase 5 Tests
#==============================================================================

add_subdirectory(phase5)

#==============================================================================
# Integration Tests
#==============================================================================

add_subdirectory(integration)

#==============================================================================
# Test Data
#==============================================================================

# Copy test STEP files to build directory
file(COPY ${CMAKE_SOURCE_DIR}/samples/step_files
     DESTINATION ${CMAKE_BINARY_DIR}/test_data)

message(STATUS "Test data copied to ${CMAKE_BINARY_DIR}/test_data")
