#==============================================================================
# OpenPanelCAM Phase 3: Sequencer
#==============================================================================

# TODO: Implement Phase 3

message(STATUS "Phase 3: Sequencer - Not implemented yet")

add_library(openpanelcam_phase3 INTERFACE)
target_link_libraries(openpanelcam_phase3 INTERFACE openpanelcam_core)
