#==============================================================================
# OpenPanelCAM Phase 4: Physics Validator
#==============================================================================

# TODO: Implement Phase 4

message(STATUS "Phase 4: Physics Validator - Not implemented yet")

add_library(openpanelcam_phase4 INTERFACE)
target_link_libraries(openpanelcam_phase4 INTERFACE openpanelcam_core)
