#==============================================================================
# OpenPanelCAM Phase 5: Post-Processor
#==============================================================================

# TODO: Implement Phase 5

message(STATUS "Phase 5: Post-Processor - Not implemented yet")

add_library(openpanelcam_phase5 INTERFACE)
target_link_libraries(openpanelcam_phase5 INTERFACE openpanelcam_core)
