#==============================================================================
# Integration Tests
#==============================================================================

# TODO: Create integration test files
# add_executable(test_integration
#     test_phase1_integration.cpp
# )
#
# target_link_libraries(test_integration PRIVATE
#     openpanelcam_phase1
#     Catch2::Catch2WithMain
# )
#
# catch_discover_tests(test_integration)
#
# # Set test data path
# target_compile_definitions(test_integration PRIVATE
#     TEST_DATA_PATH="${CMAKE_BINARY_DIR}/test_data/step_files"
# )
